--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
 <script type="text/javascript" src="js/app/templates/nextLiveMatches.js"></script>
 
 
+<!-- <script type="text/javascript" src="js/lib/require.min.js"></script> -->
+<!-- <script type="text/javascript" src="build/js/main.js"></script> -->
+
+
 <script>
     (function() {
         var req = document.createElement('script');
         req.type = 'text/javascript'; req.async = true;
         req.src = 'js/lib/require.min.js?build=' + (new Date()).getTime();
-        req.setAttribute('data-main', "js/main.js");
+        req.setAttribute('data-main', "build/js/main.js");
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(req, s);
     }());
