--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         var req = document.createElement('script');
         req.type = 'text/javascript'; req.async = true;
         req.src = 'js/lib/require.min.js?build=' + (new Date()).getTime();
-        req.setAttribute('data-main', "build/js/main.js");
+        req.setAttribute('data-main', "js/main.js");
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(req, s);
     }());
