--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <script type="text/javascript" src="http://10.0.3.55/updateLiveNextMatches?request=ajax&javascript=true"></script>
 
-<script type="text/javascript" src="js/app/templates/nextLiveMatches.js"></script>
+<script type="text/javascript" src="http://radu.betbrain.com/new/js/compiledtemplates/nextLiveMatches.js"></script>
 
 
 <!-- <script type="text/javascript" src="js/lib/require.min.js"></script> -->
