--- a/index.html
+++ b/index.html
@@ -36,14 +36,8 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
 <script type="text/javascript" src="js/lib/soyutils.js"></script>
 
-<script type="text/javascript" src="http://10.0.3.55/updateLiveNextMatches?request=ajax&javascript=true"></script>
-
-<script type="text/javascript" src="http://radu.betbrain.com/new/js/compiledtemplates/nextLiveMatches.js"></script>
-
-
-<!-- <script type="text/javascript" src="js/lib/require.min.js"></script> -->
-<!-- <script type="text/javascript" src="build/js/main.js"></script> -->
-
+<script type="text/javascript" src="http://radu.betonvalue.com/updateLiveNextMatches?request=ajax&javascript=true"></script>
+<script type="text/javascript" src="http://radu.betonvalue.com/new/js/compiledtemplates/nextLiveMatches.js"></script>
 
 <script>
     (function() {
