--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <script type="text/javascript" src="http://radu.betonvalue.com/updateLiveNextMatches?request=ajax&javascript=true"></script>
 <script type="text/javascript" src="http://radu.betonvalue.com/new/js/compiledtemplates/nextLiveMatches.js"></script>
+<!-- <script type="text/javascript" src="js/app/templates/nextLiveMatches.js"></script> -->
 
 <script>
     (function() {
