--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
 <script type="text/javascript" src="js/lib/soyutils.js"></script>
 
-<script type="text/javascript" src="http://stage.betonvalue.com/updateLiveNextMatches?request=ajax&javascript=true"></script>
-<script type="text/javascript" src="http://stage.betonvalue.com/new/js/compiledtemplates/nextLiveMatches.js"></script>
+<script type="text/javascript" src="http://radu.betonvalue.com/updateLiveNextMatches?request=ajax&javascript=true"></script>
+<script type="text/javascript" src="http://radu.betonvalue.com/new/js/compiledtemplates/nextLiveMatches.js"></script>
 <!-- <script type="text/javascript" src="js/app/templates/nextLiveMatches.js"></script> -->
 
 <script>
