--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon-precomposed" href="http://gfxnew.betonvalue.com/apple-touch-icon-57x57-bov-precomposed.png" media="screen and (resolution: 163dpi)" /><link rel="apple-touch-icon-precomposed" href="http://gfxnew.betonvalue.com/apple-touch-icon-72x72-bov-precomposed.png" media="screen and (resolution: 132dpi)" /><link rel="apple-touch-icon-precomposed" href="http://gfxnew.betonvalue.com/apple-touch-icon-114x114-bov-precomposed.png" media="screen and (resolution: 326dpi)" /><link rel="apple-touch-startup-image" href="http://gfxnew.betonvalue.com/startup-iphone-bov.png" media="only screen and (max-device-width : 480px)" /><link rel="apple-touch-startup-image" href="http://gfxnew.betonvalue.com/startup-bov.png" media="only screen and (min-device-width : 481px) and (max-device-width : 1024px) and (orientation : portrait)" /><link rel="apple-touch-startup-image" href="http://gfxnew.betonvalue.com/startup-ipad-landscape-bov.png" media="only screen and (min-device-width : 481px) and (max-device-width : 1024px) and (orientation : landscape)" /><link rel="icon" href="http://gfxnew.betonvalue.com/favicon-32-bov.png" sizes="32x32" />
     <link rel="icon" href="http://gfxnew.betonvalue.com/favicon-48-bov.png" sizes="48x48"/>
     <link rel="shortcut icon" href="http://gfxnew.betonvalue.com/favicon-bov.ico" />
-    <link rel="stylesheet" type="text/css" href="http://betbrain.com/new/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="http://assets.betbrain.com/new/css/style.min.201304150906.css" />
 
     <style>
         /* global changes */
@@ -26,7 +26,8 @@
         @-o-keyframes update  { 0% { background-color : #ff0; opacity : 0.75; } 100% { background-color : #fff; opacity : 1; } }
         @keyframes update   { 0% { background-color : #ff0; opacity : 0.75; } 100% { background-color : #fff; opacity : 1; } }
          
-        .Changed, .Change { background : transparent; -moz-animation : update 0.25s 10 alternate ease-out; -webkit-animation : loading 0.25s 10 alternate ease-out; -o-animation : loading 0.25s 10 alternate ease-out; animation : loading 0.25s 10 alternate ease-out; transform : translateZ(0); }
+        /*.Changed, .Change { background : transparent; -moz-animation : update 0.25s 10 alternate ease-out; -webkit-animation : loading 0.25s 10 alternate ease-out; -o-animation : loading 0.25s 10 alternate ease-out; animation : loading 0.25s 10 alternate ease-out; transform : translateZ(0); }*/
+        /*.Changed span { color:#fff; }*/
     </style>
     
     <!--[if IE]>
